--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.2",
+    "@mui/x-data-grid": "^8.11.3",
     "@reactivex/rxjs": "^6.6.7",
     "@reduxjs/toolkit": "^2.9.0",
     "firebase": "^12.2.1",
